--- a/test-frontend/src/index.html
+++ b/test-frontend/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TestFrontend</title>
+    <title>Test</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -31,7 +31,7 @@
     <!-- ============================================================== -->
     <script src="./assets/plugins/bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="./assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="./assets/js/app-style-switcher.js"></script>
     <!--Wave Effects -->
     <script src="./assets/js/waves.js"></script>
